--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -54,3 +54,8 @@ width: fit-content;
     flex-direction: row;
     align-items: center;
 }
+
+.anim{
+    -webkit-animation-duration: 10s;animation-duration: 10s;
+            -webkit-animation-fill-mode: both;animation-fill-mode: both;
+}
